# Midas

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-site.yml  publish.yml
site/static/: CNAME
src/midas/: __init__.py  cli.py  core.py  defaults.py
src/midas/starter/: .gitignore  gitignore  midas.yaml
src/midas/starter/content/: 404.md
src/midas/starter/content/p/: configuration.md  getting-started.md  midas-showcase.md
src/midas/starter/content/posts/: getting-started.md
src/midas/starter/site/: style.css
src/midas/starter/site/p/: configuration.md  getting-started.md  midas-showcase.md
src/midas/static/: style.css
src/midas/templates/: base.html  home.html  page.html  post-list.html  post.html
